Resolves: tdf#100845 exception during vcl painting -> std::terminate

GetText throws under the circumstances described in the bug where
the record is missing

Change-Id: I03b0ce9a19d93a7eb8842831b433b80a20628541